force-app/main/default/objects/DSALES_Certificado__c/DSALES_Certificado__c.object-meta.xml
<CustomObject>
    <description>Objeto donde se registrarán los certificados de Garantía Extendida</description>
    <label>Certificado</label>
    <nameField>
        <displayFormat>GEX-{00000}</displayFormat>
        <label>Número de Certificado</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>