force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_Caja_GEX__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Caja_GEX__c</fullName>
    <description>Número de caja</description>
    <label>No. de Caja</label>
    <length>4</length>
    <type>Text</type>
</CustomField>