force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_Cliente__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre del Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Certificados</relationshipLabel>
    <relationshipName>NombreCliente</relationshipName>
    <type>Lookup</type>
</CustomField>