force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_Costo_de_Garantia_Extendida__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Costo_de_Garantia_Extendida__c</fullName>
    <description>Costo de la Garantía Extendida</description>
    <label>Costo de Garantía Extendida</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>