force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_DescripcionDelArtculo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_DescripcionDelArtculo__c</fullName>
    <description>Descripción de artículo</description>
    <label>Descripción del artículo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>