force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_Domicilio_del_Client_e__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Domicilio_del_Client_e__c</fullName>
    <label>Domicilio del Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>