force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_Duracion_de_GEX__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Duracion_de_GEX__c</fullName>
    <label>Duración de Garantía extendida (meses)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>