force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_E_mail__c.field-meta.xml
<CustomField>
    <fullName>DSALES_E_mail__c</fullName>
    <formula>DSALES_Cliente__r.PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E-mail</label>
    <type>Text</type>
</CustomField>