force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_Email__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Email__c</fullName>
    <label>E-mail</label>
    <type>Email</type>
</CustomField>