force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_enviado__c.field-meta.xml
<CustomField>
    <fullName>DSALES_enviado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el certificado fue enviado al cliente</description>
    <label>Certificado enviado</label>
    <type>Checkbox</type>
</CustomField>