force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_Factura__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Factura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factura</label>
    <referenceTo>DSALES_Informaci_n_de_Pago__c</referenceTo>
    <relationshipLabel>Certificados</relationshipLabel>
    <relationshipName>Pago</relationshipName>
    <type>Lookup</type>
</CustomField>