force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_Fecha_de_compra_GEX__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Fecha_de_compra_GEX__c</fullName>
    <label>Fecha de compra de GEX</label>
    <type>Date</type>
</CustomField>