force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_Fecha_de_venta_del_articulo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Fecha_de_venta_del_articulo__c</fullName>
    <label>Fecha de venta del artículo</label>
    <type>Date</type>
</CustomField>