force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_Fecha_Inicio_de_Vigencia__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Fecha_Inicio_de_Vigencia__c</fullName>
    <label>Fecha de Inicio de Vigencia</label>
    <type>Date</type>
</CustomField>