force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_InformacionDePago__c.field-meta.xml
<CustomField>
    <fullName>DSALES_InformacionDePago__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Información de Pago</label>
    <referenceTo>DSALES_InformacionDePago__c</referenceTo>
    <relationshipLabel>Certificados (Información de Pago)</relationshipLabel>
    <relationshipName>Certificados</relationshipName>
    <type>Lookup</type>
</CustomField>