force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_M_odelo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_M_odelo__c</fullName>
    <label>Modelo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>