force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_No_de_Telefono__c.field-meta.xml
<CustomField>
    <fullName>DSALES_No_de_Telefono__c</fullName>
    <label>No. de Teléfono</label>
    <type>Phone</type>
</CustomField>