force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_No_Transacci_n__c.field-meta.xml
<CustomField>
    <fullName>DSALES_No_Transacci_n__c</fullName>
    <description>No. de transacción</description>
    <displayFormat>C-GEX{00000}</displayFormat>
    <label>No. Transacción</label>
    <type>AutoNumber</type>
</CustomField>