force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_Nombre_del_Vendedor__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Nombre_del_Vendedor__c</fullName>
    <formula>DSALES_Factura__r.DSALES_Nombre_del_Vendedor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del Vendedor</label>
    <type>Text</type>
</CustomField>