force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_Nombre_Vendedor__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Nombre_Vendedor__c</fullName>
    <label>Nombre del Vendedor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>