force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_NombreCliente__c.field-meta.xml
<CustomField>
    <fullName>DSALES_NombreCliente__c</fullName>
    <formula>IF(DSALES_Cliente__r.IsPersonAccount, DSALES_Cliente__r.FirstName +&quot; &quot;+DSALES_Cliente__r.LastName, DSALES_Cliente__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Cliente</label>
    <type>Text</type>
</CustomField>