force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_Numero_celular__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Numero_celular__c</fullName>
    <label>No. de Celular</label>
    <type>Phone</type>
</CustomField>