force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_Numero_de_Vendedor__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Numero_de_Vendedor__c</fullName>
    <label>No. de Vendedor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>