force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_Numero_serie__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Numero_serie__c</fullName>
    <label>No. de Serie</label>
    <length>20</length>
    <type>Text</type>
</CustomField>