force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Certificados</relationshipLabel>
    <relationshipName>Certificados</relationshipName>
    <type>Lookup</type>
</CustomField>