force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_Precio_del_Articulo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Precio_del_Articulo__c</fullName>
    <label>Precio del Artículo</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>