force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_ProductoAdquirido__c.field-meta.xml
<CustomField>
    <fullName>DSALES_ProductoAdquirido__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Campo relación entre el Producto Adquirido y el pago.</description>
    <label>Producto Adquirido</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Certificados</relationshipLabel>
    <relationshipName>Certificados</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>