force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_S_KU__c.field-meta.xml
<CustomField>
    <fullName>DSALES_S_KU__c</fullName>
    <label>SKU</label>
    <length>10</length>
    <type>Text</type>
</CustomField>