force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_Ticket__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Ticket__c</fullName>
    <description>No. de factura de la compra</description>
    <label>Factura</label>
    <length>16</length>
    <type>Text</type>
</CustomField>