force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_Tienda__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Tienda__c</fullName>
    <description>Clave de Tienda</description>
    <label>Clave de Tienda</label>
    <length>7</length>
    <type>Text</type>
</CustomField>