force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_Vigenciacumplida__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Vigenciacumplida__c</fullName>
    <formula>NOMIGRAR__c  =  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vigencia cumplida</label>
    <type>Checkbox</type>
</CustomField>