force-app/main/default/objects/DSALES_Certificado__c/fields/NOMIGRAR__c.field-meta.xml
<CustomField>
    <fullName>NOMIGRAR__c</fullName>
    <label>Pruebafechavigencia</label>
    <type>Date</type>
</CustomField>