force-app/main/default/objects/DSALES_Certificado__c/listViews/Certificado_por_sucursal.listView-meta.xml
<ListView>
    <fullName>Certificado_por_sucursal</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DSALES_T_ienda__c</field>
        <operation>equals</operation>
        <value>T 0983</value>
    </filters>
    <label>Certificado por sucursal</label>
</ListView>