force-app/main/default/objects/DSALES_Certificado__c/listViews/DSALES_Mis_Certificados.listView-meta.xml
<ListView>
    <fullName>DSALES_Mis_Certificados</fullName>
    <columns>NAME</columns>
    <columns>DSALES_Cliente__c</columns>
    <columns>DSALES_ProductoAdquirido__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mis Certificados</label>
</ListView>