force-app/main/default/objects/DSALES_Certificado__c/listViews/DSALES_Nuevos_de_esta_semana.listView-meta.xml
<ListView>
    <fullName>DSALES_Nuevos_de_esta_semana</fullName>
    <columns>NAME</columns>
    <columns>DSALES_Cliente__c</columns>
    <columns>DSALES_ProductoAdquirido__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Nuevos de esta semana</label>
</ListView>